Organized html and decided on flex as primary layout.

--- a/styles.css
+++ b/styles.css
@@ -77,3 +77,6 @@ select {
 /* ========================= Base Styles ========================= */
 
 /* ========================= Media Queriers ========================= */
+//desktop change at 960px
+@media screen and (min-width: 60rem) {
+}
