--- a/styles.css
+++ b/styles.css
@@ -168,6 +168,13 @@ main {
   box-shadow: 0px 10px 10px var(--shadow);
 }
 
+.btn-sign-up:hover {
+  color: var(--bright-yellow);
+  border: 3px solid var(--bright-yellow);
+  background-color: var(--light-cyan);
+  box-shadow: none;
+}
+
 .why {
   background-color: var(--light-cyan);
   border-radius: 0 0 5px 5px;
